# PseudoCompiler

./: .gitignore  CMakeLists.txt  Grammar.md  LICENSE  NOTICE.md  README.md  expected.txt  read.txt
.github/workflows/: ci.yml
include/: ast.hpp  codegen.hpp  ir.hpp  tokens.hpp
src/: codegen.cpp  ir.cpp  main.cpp  parser.yy  scanner.l
